# AutoZRecruitment

./: .gitignore  README.md
Computer_Vision/: README.md
Computer_Vision/Task-1/: Code.ipynb  README.md  Task-1.md
Computer_Vision/Task-2/: README.md  Task-2.md
Computer_Vision/Task-3/: README.md
Electrical/Task2/: AutoZ Electrical Task 2.brd  AutoZ Electrical Task 2.ino
Electrical/Task4/: Bistable Multivibrator Plot.emf  Bistable Multivibrator.asc  Bistable Multivibrator.emf  Bistable Multivibrator.plt
Electrical/Task5/: AutoZ Electrical Task 5.brd  AutoZ Electrical Task 5.ino
Robot-Uprising/: README.md
Robot-Uprising/Task1/: CMakeLists.txt  README.md  package.xml
Robot-Uprising/Task1/output/: AutoZ Robot-Uprising 1.1.mkv
Robot-Uprising/Task1/scripts/: node_turtle_revolve.py
Robot-Uprising/Task2/: README.md
Robot-Uprising/Task3/: README.md
Robot-Uprising/autoz_catkin/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Robot-Uprising/autoz_catkin/src/ebot_description/: CMakeLists.txt
Robot-Uprising/autoz_catkin/src/task1/: CMakeLists.txt  package.xml
Robot-Uprising/lane_detection/: HSV_vals.py  lane_follow.py  my_lane.py  test.py
Robot-Uprising/robot_uprising_packages/: README.md
Robot-Uprising/robot_uprising_packages/ebot_gazebo/: CMakeLists.txt
Silicon-Tongue/: README.md
Silicon-Tongue/Task1/: AutoZ Task 1.brd  README.md  Task1.md
Silicon-Tongue/Task2/: AutoZ Task 2.brd  AutoZ Task 2A.ino  AutoZ Task 2B.ino  README.md  Task2.md
Silicon-Tongue/Task3/: README.md  Task 3A.ino  Task3.md
(+36 files in other folders)
