<?xml version="1.0"?>
<package format="2">
  <name>task1</name>
  <version>1.0.0</version>
  <description>The package with the solution for AutoZ Recruitment Robot-Uprising Task 1</description>

  <maintainer email="rohan.rj120@gmail.com">Rohan Jacob</maintainer>


  <license>BSD</license>


  <author email="rohan.rj120@gmail.com">Rohan Jacob</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
